Still no labels

--- a/sage_latex_template_3/Bins.tex
+++ b/sage_latex_template_3/Bins.tex
@@ -84,7 +84,7 @@
   \postauthor{\par}
   \predate{\centering\large\emph}
   \postdate{\par}
-  \date{May 12, 2017}
+  \date{May 13, 2017}
 
 
 \begin{document}
@@ -284,6 +284,9 @@ relevant baseline variables.
 \subsection{Discussion}\label{discussion}
 
 Look how smart we are.
+
+Use of color to make it clear where the closer to 0 ones are. Click on
+axis.
 
 \bibliography{bibliography.bib}
 
