--- a/sage_latex_template_3/Bins.Rmd
+++ b/sage_latex_template_3/Bins.Rmd
@@ -104,189 +104,7 @@ drawDetails.lattice <- function(x, recording=FALSE){
 } 
 
 
-## Function that draws the plot and saves it in a file
-## Graphing Ks
-makePlot <- function(V, P, D, Tm, NVs){
-  ## Tm = Number of times we randomize (default 300) 
-  ## NVs = Number of variables
-  ## When there are 2 variables to be plotted on 1 panel it is easier
-  ## to do this in layout then in coding below. Number of Panels
-  LV = length(V)
-  NP = 2 * ceiling(LV/2)
-  
-  ## No. of full panels is found this way.
-  NFP = ifelse(LV%/% 2 == 1, (LV - 3)/2, (LV - 2)/2)
-  
-  if(LV%/%2 == 1){
-    
-    layout(matrix(c(0, 1:NP, 0, rep(0, NP + 2)),
-                  byrow = TRUE, nrow = 2), 
-           widths = c(lcm(0.9), rep(1, NFP), rep(.5, 4), rep(1, NFP), lcm(0.9)),
-           heights = c(1, lcm(1)))
-  }else{
-    
-    layout(matrix(c(0, 1:NP, 0, rep(0, NP + 2)),
-                  byrow = TRUE, nrow = 2), 
-           widths = c(lcm(0.9), rep(1, NFP), rep(.5, 2), rep(1, NFP), lcm(0.9)),
-           heights = c(1, lcm(1)))
-  }
-  
-  print(layout.show(NP))
-  
-  BS = ifelse(LV %% 2 == 0, 2, 4) ## Even number of variables - 1 plot contains
-  ## 2 vertical histograms, if not 2 plots have 2 histograms
-  
-  S = c(rep("R", NFP), rep("B", BS), rep("L", NFP)) ## sequence to tell 
-  ## if it's LHS, or RHS plot. 
-  
-  ## Setting the margins to be 0
-  par(mar = rep(0,4))
-  
-  ## Making the first lot of vertical histograms
-  if(NFP > 0){
-    for(i in 1:NFP){
-      par(mar = rep(0,4))
-      
-      A = hist(D[,V[[i]][[1]]], plot = FALSE)
-      a = range(A$breaks)
-      plot(c(0, 1), a, type = "n",
-           ann = FALSE, axes = FALSE, xaxs = "i", yaxs = "i")
-      
-      VHV(fillCol = mypalette[5], lineCol = mypalette[4], xscale = .02,
-          xwidth = 1,  hist = A, Side = S[i])
-      m = range(A$mids)
-      axis(2, cex.axis = 0.7, las = 2, col = mypalette[4],
-           at = m, labels = as.character(m), tck = 0)
-      mtext(P[[2]][i, "L"], side = 1, col = "grey50", cex = 0.5, adj = 0)
-    }
-  }
-  
-  ## Making the smaller panels.
-  ## There are 2 panels if there are an odd number of variables
-  if(LV%/%2 == 1){
-    
-    ## The first thing on the first panel
-    j = floor(LV/2)
-    A = hist(D[,V[[j]][[1]]], plot = FALSE)
-    
-    ## This one gets plotted twice
-    k = ceiling(LV/2)
-    B = hist(D[,V[[k]][[1]]], plot = FALSE)
-    
-    ## This is the last thing on the last panel
-    l = ceiling(LV/2) + 1
-    C = hist(D[,V[[l]][[1]]], plot = FALSE)
-    
-    ## Plotting A first
-    a = range(A$breaks)
-    plot(c(0, 1), a, type = "n",
-         ann = FALSE, axes = FALSE, xaxs = "i", yaxs = "i")
-    VHV(fillCol = mypalette[5], lineCol = mypalette[4], xscale = .02/2,
-        xwidth = 1,  hist = A, Side = "R")
-    ## Plotting labels
-    m = range(A$mids)
-    axis(2, cex.axis = 0.7, las = 2, col = mypalette[4],
-         at = m, labels = as.character(m), tck = 0)
-    mtext(P[[2]][j, "L"], side = 1, col = "grey50", cex = 0.5, adj = 0)
-    
-    ## Plotting B second
-    b = range(B$breaks)
-    plot(c(0, 1), b, type = "n",
-         ann = FALSE, axes = FALSE, xaxs = "i", yaxs = "i")
-    VHV(fillCol = mypalette[5], lineCol = mypalette[4], xscale = .02/2,
-        xwidth = 1,  hist = B, Side = "L")
-    
-    ## Plotting labels
-    m1 = range(B$mids)
-    axis(4, cex.axis = 0.7, las = 2, col = mypalette[4],
-         at = m1, labels = as.character(m1), tck = 0)
-    mtext(P[[2]][k, "L"], side = 1, col = "grey50", cex = 0.5, adj = 1)
-    
-    ## Plotting B third
-    plot(c(0, 1), b, type = "n",
-         ann = FALSE, axes = FALSE, xaxs = "i", yaxs = "i")
-    VHV(fillCol = mypalette[5], lineCol = mypalette[4], xscale = .02/2,
-        xwidth = 1,  hist = B, Side = "R")
-    
-    ## Plotting labels
-    axis(2, cex.axis = 0.7, las = 2, col = mypalette[4],
-         at = m1, labels = as.character(m1), tck = 0)
-    mtext(P[[2]][k, "L"], side = 1, col = "grey50", cex = 0.5, adj = 0)
-    
-    ## Plotting C last
-    d = range(C$breaks)
-    plot(c(0, 1), d, type = "n",
-         ann = FALSE, axes = FALSE, xaxs = "i", yaxs = "i")
-    VHV(fillCol = mypalette[5], lineCol = mypalette[4], xscale = .02/2,
-        xwidth = 1,  hist = C,  Side = "L")
-    
-    ## Plotting labels
-    m1 = range(C$mids)
-    axis(4, cex.axis = 0.7, las = 2, col = mypalette[4],
-         at = m1, labels = as.character(m1), tck = 0)
-    mtext(P[[2]][l, "L"], side = 1, col = "grey50", cex = 0.5, adj = 1)
-    
-  }else{
-    
-    ## This will be plotted first
-    j = LV/2
-    A = hist(D[,V[[j]][[1]]], plot = FALSE)
-    
-    ## This will be plotted second
-    k = LV/2 +1
-    B = hist(D[,V[[k]][[1]]], plot = FALSE)
-    
-    ## Plotting A first
-    a = range(A$breaks)
-    plot(c(0, 1), a, type = "n",
-         ann = FALSE, axes = FALSE, xaxs = "i", yaxs = "i")
-    VHV(fillCol = mypalette[5], lineCol = mypalette[4], xscale = .02/2,
-        xwidth = 1,  hist = A, Side = "R")
-    
-    ## Adding labels
-    m = range(A$mids)
-    axis(2, cex.axis = 0.7, las = 2, col = mypalette[4],
-         at = m, labels = as.character(m), tck = 0)
-    mtext(P[[2]][j, "L"], side = 1, col = "grey50", cex = 0.5, adj = 0)
-    
-    ## Plotting B second
-    b = range(B$breaks)
-    plot(c(0, 1), b, type = "n",
-         ann = FALSE, axes = FALSE, xaxs = "i", yaxs = "i")
-    VHV(fillCol = mypalette[5], lineCol = mypalette[4], xscale = .02/2,
-        xwidth = 1,  hist = B, Side = "L")
-    
-    ## Adding labels
-    m1 = range(B$mids)
-    axis(4, cex.axis = 0.7, las = 2, col = mypalette[4],
-         at = m1, labels = as.character(m1), tck = 0)
-    mtext(P[[2]][k, "L"], side = 1, col = "grey50", cex = 0.5, adj = 1)
-  }
-  
-  
-  ## Making the last lot of histograms, the left ones 
-  if(NFP > 0){
-    Lt = which(S == "L")
-    for(i in 1:NFP){
-      j = Lt[i]
-      
-      A = hist(D[,V[[j]][[1]]], plot = FALSE)
-      a = range(A$breaks)
-      plot(c(0, 1), a, type = "n",
-           ann = FALSE, axes = FALSE, xaxs = "i", yaxs = "i")
-      
-      VHV(fillCol = mypalette[5], lineCol = mypalette[4], xscale = .02,
-          xwidth = 1,  hist = A, Side = S[j])
-      m = range(A$mids)
-      axis(4, cex.axis = 0.7, las = 2, col = mypalette[4],
-           at = m, labels = as.character(m), tck = 0)
-      mtext(P[[2]][j, "L"], side = 1, col = "grey50", cex = 0.5, adj = 1)
-    }
-  }
-  
-  grid.echo()
-  grid.grab() -> p2
-  
+makePlot = function(V, P, D, Tm, NVs, cols){
   ## Including means of columns and indicator that tells
   ## whether or not it is to be included in plot as mean (light blue)
   ## or regular data point
@@ -298,11 +116,10 @@ makePlot <- function(V, P, D, Tm, NVs){
   upper <- as.numeric(P[[2]][,"Maxs"])
   
   ## Naming the columns
-  I = P[[2]]
-  CNs <- c(I[,'L'], "G")
+  CNs <- c(P[[2]][,'L'], "G")
   colnames(P[[3]]) = CNs
   
-  p1 = parallelplot(~P[[3]][1:NVs], P[[3]], groups = G, horizontal.axis = FALSE,
+  p1 = parallelplot(~P[[3]][cols], P[[3]], groups = G, horizontal.axis = FALSE,
                     scales = list(x = list(rot = 90),  draw = FALSE,
                                   y = list(draw = FALSE)),
                     col = c("grey50", "black"), lwd = c(1,3),
@@ -313,11 +130,11 @@ makePlot <- function(V, P, D, Tm, NVs){
                       ## If plotting with histograms underneath take out
                       ## first grid.text
                       grid.text(0,
-                                 x=unit(1:NVs, "native"),
+                                 x=unit(1:length(cols), "native"),
                                  y=unit(2, "mm"), just="bottom",
                                  gp=gpar(col="grey", cex=.7))
-                      grid.text(upper,
-                                x=unit(1:NVs, "native"),
+                      grid.text(upper[cols],
+                                x=unit(1:length(cols), "native"),
                                 y=unit(1, "npc") - unit(2, "mm"), 
                                 just="top",
                                 gp=gpar(col="grey", cex=.7))
@@ -325,41 +142,10 @@ makePlot <- function(V, P, D, Tm, NVs){
                     })
   
   A  = list()
-  A[[1]] = p2
   A[[2]] = latticeGrob(p1)
   
   A 
 }
-
-## Function used to make vertical histograms that vary.
-VHV <- function(xscale = NULL, xwidth, hist, fillCol, lineCol, Side) {
-  
-  ## Right histograms - histograms that start at the LHS and branch out from the 
-  ## right
-  if(Side == "R"){
-    binWidth <- hist$breaks[2] - hist$breaks[1]
-    n <- length(hist$counts)
-    x.l <- rep(0, n)
-    x.r <- x.l + hist$counts * xscale
-    y.b <- hist$breaks[1:n]
-    y.t <- hist$breaks[2:(n + 1)]
-    rect(xleft = x.l, ybottom = y.b, xright = x.r, ytop = y.t,
-         col = fillCol, border = lineCol)
-  }
-  
-  ## Left histograms - histograms that start from the RHS and spread out left
-  if(Side == "L"){
-    binWidth <- hist$breaks[2] - hist$breaks[1]
-    n <- length(hist$counts)
-    x.r <- rep(1, n)
-    x.l <- x.r - hist$counts * xscale
-    y.b <- hist$breaks[1:n]
-    y.t <- hist$breaks[2:(n + 1)]
-    rect(xleft = x.l, ybottom = y.b, xright = x.r, ytop = y.t,
-         col = fillCol, border = lineCol)
-  }
-}
-
 
 ## reading the data
 ## setwd(".")
@@ -468,14 +254,35 @@ make.Ks = function(M, vars, D, Plot, S, ToC){
   P
 } ## closing the function make.Ks
 
-V = list(list("2014 Total\r\nDischarges", 0, "Total DC", 0, 10),
-         list("2014\r\nCensus", .5, "Avg Daily Census", 0, 40))
+V = list(list("% Discharges to Hospital\r\nw/ Infx based on Primary\r\n& Other Diagnoses", 2, "% DC Infx", 0, 10),
+         list("% Discharge\r\nto Hospital", 0, "% DC", 0, 10),
+         list("% Any MDRO",4,"MDRO", 0, 10),
+         list("% Usage of Antibacterials\r\nStarted at Nursing Home", 0,"% Abx", 0, 10),
+         list("2014\r\nCensus", .5, "Avg Daily Census", 0, 30),
+         list("% Admissions\r\nw/ LOS: 100+", 0,"% Long Stay", 0, 10),
+         list("Average # of Baths/Showers per Resident Per Week",0,"Baths/week", 0, 3),
+         list("Avg Dependent \r\nLate Loss\r\nADLs", 0,"Late ADLs", 0, 4),
+         list("Overall\r\nRating", 0,"CMS Star", 0, 5))
 
-V1 = list(list("2014 Total\r\nDischarges", 0, "Total DC", 0, 10),
-         list("2014\r\nCensus", 0, "Avg Daily Census", 0, 40))
+V1 =  list(list("% Discharges to Hospital\r\nw/ Infx based on Primary\r\n& Other Diagnoses", 0, "% DC Infx", 0, 10),
+         list("% Discharge\r\nto Hospital", 0, "% DC", 0, 10),
+         list("% Any MDRO",4,"MDRO", 0, 10),
+         list("% Usage of Antibacterials\r\nStarted at Nursing Home", 0,"% Abx", 0, 10),
+         list("2014\r\nCensus", 0, "Avg Daily Census", 0, 30),
+         list("% Admissions\r\nw/ LOS: 100+", 0,"% Long Stay", 0, 10),
+         list("Average # of Baths/Showers per Resident Per Week",0,"Baths/week", 0, 3),
+         list("Avg Dependent \r\nLate Loss\r\nADLs", 0,"Late ADLs", 0, 4),
+         list("Overall\r\nRating", 0,"CMS Star", 0, 5))
 
-V2 = list(list("2014 Total\r\nDischarges", 5, "Total DC", 0, 10),
-         list("2014\r\nCensus", 0, "Avg Daily Census", 0, 40))
+V2 =  list(list("% Discharges to Hospital\r\nw/ Infx based on Primary\r\n& Other Diagnoses", 5, "% DC Infx", 0, 10),
+         list("% Discharge\r\nto Hospital", 0, "% DC", 0, 10),
+         list("% Any MDRO",4,"MDRO", 0, 10),
+         list("% Usage of Antibacterials\r\nStarted at Nursing Home", 0,"% Abx", 0, 10),
+         list("2014\r\nCensus", .5, "Avg Daily Census", 0, 30),
+         list("% Admissions\r\nw/ LOS: 100+", 0,"% Long Stay", 0, 10),
+         list("Average # of Baths/Showers per Resident Per Week",0,"Baths/week", 0, 3),
+         list("Avg Dependent \r\nLate Loss\r\nADLs", 0,"Late ADLs", 0, 4),
+         list("Overall\r\nRating", 0,"CMS Star", 0, 5))
 
 ## Making data 
 ## The leftover is sent to the treatment arm (ToC = 2)
@@ -483,15 +290,15 @@ P = make.Ks(M = 300, D = D, Plot = "noscreen", vars = V, S = "glpk", ToC = 2)
 P1 = make.Ks(M = 300, D = D, Plot = "noscreen", vars = V1, S = "glpk", ToC = 2)
 P2 = make.Ks(M = 300, D = D, Plot = "noscreen", vars = V2, S = "glpk", ToC = 2)
 
-## Making the things to plot
+## Making the things to plot - cols 1, 5 only
 ## Half the screen on bottom
-A = makePlot(V = V, P = P, D = D, Tm = 300, NVs = 2)
+A = makePlot(V = V, P = P, D = D, Tm = 300, NVs = 2, cols = c(1,5))
 
 ## Top Left
-A1 = makePlot(V = V1, P = P1, D = D, Tm = 300, NVs = 2)
+A1 = makePlot(V = V1, P = P1, D = D, Tm = 300, NVs = 2, cols = c(1,5))
 
 ## Top Right
-A2 = makePlot(V = V2, P = P2, D = D, Tm = 300, NVs = 2)
+A2 = makePlot(V = V2, P = P2, D = D, Tm = 300, NVs = 2, cols = c(1,5))
 
 ## The bottom one
 grid.newpage()
@@ -520,4 +327,6 @@ Prior to randomization, investigators spent time using a web application built u
 ## Discussion
 
 Look how smart we are.
+
+Use of color to make it clear where the closer to 0 ones are. Click on axis.
 
