--- a/sage_latex_template_3/Bins.Rmd
+++ b/sage_latex_template_3/Bins.Rmd
@@ -22,7 +22,7 @@ To determine the efficacy of a treatment, individually randomized trials (IRTs) 
 Many authors debate matching in CRTs [@balzer2012match; @CRTrials2009; @gatsonis2017methods; @diehr1995breaking; @murray1998design; @imai2009essential;
 @PMVsStrat; @donner2007merits; @klar1997merits; @donner2000design; @martin1993effect]. Murray argues that "the choice of matching or stratification [of] factors is critical to the success of the procedure" [@murray1998design]. Some agree that caution must be used when matching a small number of clusters due to the decrease in power [@donner2000design; @klar1997merits; @balzer2012match; @martin1993effect]. Breaking matches in the analysis stage addresses this [@diehr1995breaking], but perhaps only when there are a small number of large clusters [@donner2007merits].  Others argue that matching is effective in a small number of clusters as it "increases the chance of the intervention groups being well-balanced" [@donner2007merits]. Imai et al argue that not matching, in small or large sample, is "equivalent to discarding a considerable fraction of one's data" [@imai2009essential]. However, in one trial "matching actually led to a loss in statistical efficiency" [@manun1994influence, @donner2000design]. 
 
-Despite all this debate few authors discuss methodologies to support the matching process [@raab2001balance]. An alternative to matching suggests balancing criterion based on conditioned means of covariates [@raab2001balance].  ZUBIZARRETA [@greevy2004optimal]. Our article is an extension of methods introduced in Chapter 4 of Methods in Comparative Effectiveness Research [@gatsonis2017methods]. We suggest a method suitable for $a$ $priori$ matching using baseline data. In section 2 <!-- #sec:Method  --> we outline our method, section 3 applies it to the PROTECT dataset, and section 4 is a brief discussion.
+Despite all this debate few authors discuss methodologies to support the matching process [@raab2001balance]. An alternative to matching suggests balancing criterion based on conditioned means of covariates [@raab2001balance].  ZUBIZARRETA [@greevy2004optimal]. Our article is an extension of methods introduced in Chapter 4 of Methods in Comparative Effectiveness Research [@gatsonis2017methods]. We suggest a method suitable for $a$ $priori$ matching using baseline data. In section 2 <!-- #sec:Method  --> we outline our method, section 3 applies it to the SWAPOUT dataset, and section 4 is a brief discussion.
 
 ## Methods <!-- (#sec:Method) trying to get numbering to work not sure how yet  -->
 
@@ -56,20 +56,24 @@ Once the matching is completed and pairs found we return to using the raw data, 
 THE ABOVE NEEDS A BETTER ABSOLUTE VALUE SYMBOL. for $j = 1, 2, ..., m.$ We randomize $N$ times and find $k_{lj}$ the difference in the two arms for the $j^{th}$ priority variable for each of the $l = 1, 2, ..., N$ re-randomizations. To assist analysis we draw a parallel coordinates plot where the $j^{th}$ axis plots $k_{lj}$ for $l = 1, 2, ..., N.$ If the principal investigator finds the possible differences too large for a priority variable $j$, increasing $w_j$ and re-running the above will update the matching to attain closer matches for this variable and lessen the differences. The penality in this process is that closer matches for variable $j$ are likely to imply reduced closeness in another variable, so compromises must be made.
 
 ## Results
-To demonstrate the usefulness of this technique we present a brief summary of our randomization process using baseline data from the PROTECT trial (Project PROTECT: Protecting Nursing Homes From Infections and Hospitalization) [@ProtectTrial]. In this trial, the investigators are studying whether bathing with chlorhexidine gluconate and iodophor nasal swabs "can reduce hospitalizations associated with infections, antibiotic utilization, and multi-drug resistant organism (MDRO) prevalence" versus regular bathing and no nasal swabs. Additional training is given to nursing home empolyees in the treatment arm to ensure comprehension and adherence to trial protocol. 
+To demonstrate the usefulness of this technique we present a brief summary of our randomization process using baseline data from the SWAPOUT trial (Cluster-randomized Non-inferiority Trial Comparing Mupirocin vs Iodophor for Nasal Decolonization of ICU Patients to Assess Impact on Staphylococcus aureus Clinical Cultures and All-cause Bloodstream Infection During Routine Chlorhexidine Bathing) [@SOTrial]. In this non-inferiority trial, the investigators are studying whether bathing with chlorhexidine gluconate and swabbing iodophor nasal swabs are inferior to bathing with the same and mupirocin nasal swabs. REDUCE trial ADD REF mupirocin nasal swabs and bathing with chlorhexidine reduced the MRSA Staphylococcus aureus (an antibiotic resistant infection) in Hospital Corporation of America intensive care units (ICU). However, physicians are reluctant to use mupirocin, an antibiotic, so investigators are swapping it with iodophor. 
 
-Prior to randomization baseline data was collected for 6 months on the 28 nursing homes. With this data, investigators met to prioritize baseline variables into several categories: primary, secondary, tertiary, and not relevant. For this trial, the investigators decided that percentage discharges to hospital with infection based on primary and other diagnsoses, percentage discharge to hospital, percentages MDRO, and percentage usage of antibacterials started at nursing home were of primary importance. Of secondary importance were percentage of admissions with length of stay over 100 days, average daily census, and mean number of baths per resident per week. If they were able to include more variables without effecting the balance of the others they felt matching on AVERAGE DEPENDENT late LOSS activities of daily lives, and the Centers for Medicare and Medicaid Services (CMS) rating of eaching nursing home. To ease understanding, our initial discussion will involve 2 variables:  percentage discharges to hospital with infection based on primary and other diagnsoses, and average daily census.
+Prior to randomization baseline data was collected for 20 months on the 137 hospitals. With this data, investigators met to prioritize baseline variables into several categories: primary, secondary, tertiary, quaternary, and not relevant to randomization. For this trial, the investigators decided that average monthly volume of patients with attributable time, average monthly attributable days, Staphylococcus aureus ICU-attributable cultures per 1,000 days, MRSA ICU-attributable cultures per 1,000 days, all pathogen ICU-attributable bacteremia cultures per 1,000 days, regional mupirocin resistance estimate, percent of admissions with MRSA diagnosis within a year, percent of mupirocin use admission to day 5, survey Chlorhexidine Glucominate were all of primary importance. Of secondary importance were median ICU length of stay, and mean elixhauser total score. Of tertiary importance were the percentage of ICU medicaid patients, and Polymerase chain reaction clinical specimen status. Lastly, percent admissions to skilled nursing facility (SNF), and if the ICU has specialty units for burn, trauma, etc. A list of abbreviations in the above order can be found in Table 1. To ease understanding, our initial discussion will involve 3 variables: Patient days, Staphylococcus auer rate, and MRSA rate.
 
-Primary import  | Secondary import | Tetiary import 
---------------- | ---------------- | -------------- 
-% DC Inf | % Long Stay | Late ADLs
-% DC  | Avg Daily Census | CMS Star
-MDRO  | Baths/Week
-% Abx |
+Primary import  | Secondary import | Tetiary import | Quaternary import
+--------------- | ---------------- | -------------- | -----------------
+Pt Days | Median LOS | Medicaid
+S auer Rate | Comorbidity Score | TALI WHAT ELSE??
+MRSA Rate |
+All Blood |
+Mup-R |
+Hx MRSA |
+Mup Adherence |
+CHG Adherence |
 
 Table: Abbreviations of variables used to randomize
 
-```{r setup, include=FALSE}
+```{r IntroGraph, include=FALSE}
 setwd("/Users/gwynn/Documents/PostDocKleinmanLab/Bins/Shiny/Again/sage_latex_template_3")
 ## install.packages("designmatch")
 library(designmatch)
@@ -146,15 +150,6 @@ makePlot = function(V, P, D, Tm, NVs, cols){
   
   A 
 }
-
-## reading the data
-## setwd(".")
-D = read_excel("ArtData.xlsx", sheet=1,skip = 1)[1:29,]
-D = as.data.frame(D)
-labs <- colnames(D)
-
-## Numeric variables for default inputs
-nums = labs[which(sapply(D, is.numeric) == TRUE)]
 
 # Function that does the randomizations
 # M is the number of randomizations
@@ -239,7 +234,7 @@ make.Ks = function(M, vars, D, Plot, S, ToC){
     Ctl.CV = Dt[-which(Trt == 1), 1:r.I]
     
     Ks[i,] = abs((apply(Trt.CV, 2, sum) - 
-                    apply(Ctl.CV, 2, sum))/length(R))
+                    apply(Ctl.CV, 2, sum))/N)
   }## ending for i in M.seq
   
   ## So the labels in parcoord come out nicely
@@ -247,42 +242,77 @@ make.Ks = function(M, vars, D, Plot, S, ToC){
   colnames(Ks) = I[,'L']
   
   P = list()
-  P[[1]] = vars
+  P[[1]] = cbind(id_1, id_2)
   P[[2]] = I
   P[[3]] = as.data.frame(Ks)
+  P[[4]] = Trt.CV
+  P[[5]] = Ctl.CV
   
   P
 } ## closing the function make.Ks
 
-V = list(list("% Discharges to Hospital\r\nw/ Infx based on Primary\r\n& Other Diagnoses", 2, "% DC Infx", 0, 10),
-         list("% Discharge\r\nto Hospital", 0, "% DC", 0, 10),
-         list("% Any MDRO",4,"MDRO", 0, 10),
-         list("% Usage of Antibacterials\r\nStarted at Nursing Home", 0,"% Abx", 0, 10),
-         list("2014\r\nCensus", .5, "Avg Daily Census", 0, 30),
-         list("% Admissions\r\nw/ LOS: 100+", 0,"% Long Stay", 0, 10),
-         list("Average # of Baths/Showers per Resident Per Week",0,"Baths/week", 0, 3),
-         list("Avg Dependent \r\nLate Loss\r\nADLs", 0,"Late ADLs", 0, 4),
-         list("Overall\r\nRating", 0,"CMS Star", 0, 5))
+setwd("/Users/gwynn/Documents/PostDocKleinmanLab/Bins/Again1")
+D = read_excel("SwapOut_Randomization_2017_4_27_FINAL.xlsx",  sheet=2)[1:137,]
+D = as.data.frame(D)
 
-V1 =  list(list("% Discharges to Hospital\r\nw/ Infx based on Primary\r\n& Other Diagnoses", 0, "% DC Infx", 0, 10),
-         list("% Discharge\r\nto Hospital", 0, "% DC", 0, 10),
-         list("% Any MDRO",4,"MDRO", 0, 10),
-         list("% Usage of Antibacterials\r\nStarted at Nursing Home", 0,"% Abx", 0, 10),
-         list("2014\r\nCensus", 0, "Avg Daily Census", 0, 30),
-         list("% Admissions\r\nw/ LOS: 100+", 0,"% Long Stay", 0, 10),
-         list("Average # of Baths/Showers per Resident Per Week",0,"Baths/week", 0, 3),
-         list("Avg Dependent \r\nLate Loss\r\nADLs", 0,"Late ADLs", 0, 4),
-         list("Overall\r\nRating", 0,"CMS Star", 0, 5))
+setwd("/Users/gwynn/Documents/PostDocKleinmanLab/Bins/Shiny/Again/sage_latex_template_3")
 
-V2 =  list(list("% Discharges to Hospital\r\nw/ Infx based on Primary\r\n& Other Diagnoses", 5, "% DC Infx", 0, 10),
-         list("% Discharge\r\nto Hospital", 0, "% DC", 0, 10),
-         list("% Any MDRO",4,"MDRO", 0, 10),
-         list("% Usage of Antibacterials\r\nStarted at Nursing Home", 0,"% Abx", 0, 10),
-         list("2014\r\nCensus", .5, "Avg Daily Census", 0, 30),
-         list("% Admissions\r\nw/ LOS: 100+", 0,"% Long Stay", 0, 10),
-         list("Average # of Baths/Showers per Resident Per Week",0,"Baths/week", 0, 3),
-         list("Avg Dependent \r\nLate Loss\r\nADLs", 0,"Late ADLs", 0, 4),
-         list("Overall\r\nRating", 0,"CMS Star", 0, 5))
+## Final weighting for randomization
+V = list(list("Attrib_Days_Month", 1, "Pt Days", 0, 80),
+         list("Outcome_Saureus", 4, "S auer Rate", 0, 0.15),
+         list("Outcome_MRSA", 2, "MRSA Rate", 0, 0.15),
+         list("All_Blood", 4, "All Blood", 0, 0.15),
+         list("Mup-R", 2, "Mup-R", 0, 0.02),
+         list("Hx_MRSA", 1,"Hx MRSA", 0, 0.01),
+         list("Mup_Adherence", 1, "Mup Adherence", 0, 0.05),
+         list("CHG_Adherence", 1,"CHG Adherence", 0, 0.05),
+         list("Median_LOS", 3,"Median LOS", 0, 0.05),
+         list("Elix_Score", 1,"Comorbidity Score", 0, 0.15),
+         list("Medicaid", 0,"Medicaid", 0, 0.02),
+         list("DC_SNF", 0,"DC SNF", 0, 0.02),
+         list("Surgery", 1,"Surgery", 0, 0.02),
+         list("Onc_BMT_Trp", 2,"Onc_BMT_Trp", 0, 0.1),
+         list("BMT_Trp", 0,"BMT_Trp", 0, 0.1),
+         list("PCR_Blood", 0,"PCR_Blood", 0, 0.1)
+         )
+
+## First 3 weights zeroed
+V1 = list(list("Attrib_Days_Month", 0, "Pt Days", 0, 80),
+         list("Outcome_Saureus", 0, "S auer Rate", 0, 0.15),
+         list("Outcome_MRSA", 0, "MRSA Rate", 0, 0.15),
+         list("All_Blood", 4, "All Blood", 0, 0.15),
+         list("Mup-R", 2, "Mup-R", 0, 0.02),
+         list("Hx_MRSA", 1,"Hx MRSA", 0, 0.01),
+         list("Mup_Adherence", 1, "Mup Adherence", 0, 0.05),
+         list("CHG_Adherence", 1,"CHG Adherence", 0, 0.05),
+         list("Median_LOS", 3,"Median LOS", 0, 0.05),
+         list("Elix_Score", 1,"Comorbidity Score", 0, 0.15),
+         list("Medicaid", 0,"Medicaid", 0, 0.02),
+         list("DC_SNF", 0,"DC SNF", 0, 0.02),
+         list("Surgery", 1,"Surgery", 0, 0.02),
+         list("Onc_BMT_Trp", 2,"Onc_BMT_Trp", 0, 0.1),
+         list("BMT_Trp", 0,"BMT_Trp", 0, 0.1),
+         list("PCR_Blood", 0,"PCR_Blood", 0, 0.1)
+         )
+
+## Primary outcome weighted highly others zeroed
+V2 = list(list("Attrib_Days_Month", 0, "Pt Days", 0, 80),
+         list("Outcome_Saureus", 8, "S auer Rate", 0, 0.15),
+         list("Outcome_MRSA", 0, "MRSA Rate", 0, 0.15),
+         list("All_Blood", 4, "All Blood", 0, 0.15),
+         list("Mup-R", 2, "Mup-R", 0, 0.02),
+         list("Hx_MRSA", 1,"Hx MRSA", 0, 0.01),
+         list("Mup_Adherence", 1, "Mup Adherence", 0, 0.05),
+         list("CHG_Adherence", 1,"CHG Adherence", 0, 0.05),
+         list("Median_LOS", 3,"Median LOS", 0, 0.05),
+         list("Elix_Score", 1,"Comorbidity Score", 0, 0.15),
+         list("Medicaid", 0,"Medicaid", 0, 0.02),
+         list("DC_SNF", 0,"DC SNF", 0, 0.02),
+         list("Surgery", 1,"Surgery", 0, 0.02),
+         list("Onc_BMT_Trp", 2,"Onc_BMT_Trp", 0, 0.1),
+         list("BMT_Trp", 0,"BMT_Trp", 0, 0.1),
+         list("PCR_Blood", 0,"PCR_Blood", 0, 0.1)
+         )
 
 ## Making data 
 ## The leftover is sent to the treatment arm (ToC = 2)
@@ -292,13 +322,13 @@ P2 = make.Ks(M = 300, D = D, Plot = "noscreen", vars = V2, S = "glpk", ToC = 2)
 
 ## Making the things to plot - cols 1, 5 only
 ## Half the screen on bottom
-A = makePlot(V = V, P = P, D = D, Tm = 300, NVs = 2, cols = c(1,5))
+A = makePlot(V = V, P = P, D = D, Tm = 300, NVs = 2, cols = 1:3)
 
 ## Top Left
-A1 = makePlot(V = V1, P = P1, D = D, Tm = 300, NVs = 2, cols = c(1,5))
+A1 = makePlot(V = V1, P = P1, D = D, Tm = 300, NVs = 2, cols = 1:3)
 
 ## Top Right
-A2 = makePlot(V = V2, P = P2, D = D, Tm = 300, NVs = 2, cols = c(1,5))
+A2 = makePlot(V = V2, P = P2, D = D, Tm = 300, NVs = 2, cols = 1:3)
 
 ## The bottom one
 grid.newpage()
@@ -309,13 +339,13 @@ drawDetails.lattice(A[[2]])
 upViewport()
 
 ## Top Left
-pushViewport(viewport(x=0, y=0.52, width=.5, height=.5,
+pushViewport(viewport(x=0, y=0.5, width=.52, height=.5,
                       just=c("left", "bottom")))
 drawDetails.lattice(A1[[2]])
 upViewport()
 
 ## Top Right
-pushViewport(viewport(x=0.5, y=0.52, width=.5, height=.5,
+pushViewport(viewport(x=0.52, y=0.50, width=.48, height=.5,
                       just=c("left", "bottom")))
 drawDetails.lattice(A2[[2]])
 upViewport()
@@ -329,4 +359,8 @@ Prior to randomization, investigators spent time using a web application built u
 Look how smart we are.
 
 Use of color to make it clear where the closer to 0 ones are. Click on axis.
+
+
+## Appendix
+A more formal explanation of the variables here, to be checked with Susan.
 
